fix: fixed mobile schedule modal days spacing

--- a/src/assets/scss/modals/_schedulingmodal.scss
+++ b/src/assets/scss/modals/_schedulingmodal.scss
@@ -59,8 +59,8 @@
 
       @media (max-width: 991px) {
         display: inline-block;
+        margin-right: 0.6em;
       }
-
 
       .day {
         font-family: 'Sofia Pro';
@@ -93,6 +93,7 @@
 
       @media (max-width: 991px) {
         display: inline-block;
+        margin-right: 0.6em;
       }
 
 
